--- a/src/xbuild/OrganicDialog.form
+++ b/src/xbuild/OrganicDialog.form
@@ -42,21 +42,13 @@
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="txtRDATE" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
+                  <Component id="cbRCOD" alignment="1" max="32767" attributes="0"/>
+                  <Component id="cbRMET" alignment="0" max="32767" attributes="0"/>
+                  <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="1" attributes="0">
-                              <Component id="txtRCOD" pref="275" max="32767" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="bnSelectRCOD" min="-2" pref="22" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="1" attributes="0">
-                              <Component id="txtRMET" pref="275" max="32767" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="bnSelectRMET" min="-2" pref="22" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="102" attributes="0">
+                          <Component id="txtRDATE" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Group type="102" alignment="0" attributes="0">
                                       <Component id="dpRDATE" min="-2" max="-2" attributes="0"/>
@@ -99,12 +91,12 @@
                                       <Component id="bnCancel" min="-2" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
-                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
                       </Group>
+                      <EmptySpace min="0" pref="145" max="32767" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -124,9 +116,8 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="txtRCOD" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="bnSelectRCOD" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jXLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="cbRCOD" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -170,9 +161,8 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="txtRMET" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="bnSelectRMET" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jXLabel10" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="cbRMET" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -210,16 +200,6 @@
         </Property>
         <Property name="horizontalAlignment" type="int" value="4"/>
       </Properties>
-    </Component>
-    <Component class="javax.swing.JTextField" name="txtRCOD">
-    </Component>
-    <Component class="javax.swing.JButton" name="bnSelectRCOD">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="..."/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bnSelectRCODActionPerformed"/>
-      </Events>
     </Component>
     <Component class="javax.swing.JFormattedTextField" name="txtRESN">
       <Properties>
@@ -260,16 +240,6 @@
         </Property>
         <Property name="horizontalAlignment" type="int" value="4"/>
       </Properties>
-    </Component>
-    <Component class="javax.swing.JTextField" name="txtRMET">
-    </Component>
-    <Component class="javax.swing.JButton" name="bnSelectRMET">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="..."/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bnSelectRMETActionPerformed"/>
-      </Events>
     </Component>
     <Component class="org.jdesktop.swingx.JXLabel" name="lbDay">
       <Properties>
@@ -373,6 +343,10 @@
           <Connection code="Variables.getDateFormatString()" type="code"/>
         </Property>
       </Properties>
+    </Component>
+    <Component class="xbuild.Components.XDropdownTableComboBox" name="cbRCOD">
+    </Component>
+    <Component class="xbuild.Components.XDropdownTableComboBox" name="cbRMET">
     </Component>
   </SubComponents>
 </Form>
