--- a/src/xbuild/FertilizerDialog.form
+++ b/src/xbuild/FertilizerDialog.form
@@ -43,13 +43,15 @@
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="bnOK" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="bnCancel" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Component id="txtFOCD" alignment="0" max="32767" attributes="1"/>
+                  <Component id="cbFMCD" alignment="1" max="32767" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="bnOK" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="bnCancel" min="-2" max="-2" attributes="0"/>
+                          </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="txtFAMO" min="-2" pref="100" max="-2" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -80,22 +82,16 @@
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="jXLabel11" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="txtFACD" alignment="0" pref="319" max="32767" attributes="1"/>
                           <Component id="txtFDATE" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
-                          <Component id="txtFMCD" alignment="0" pref="319" max="32767" attributes="1"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="dpFDATE" min="-2" pref="117" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="bnSelectApplication" min="-2" pref="27" max="-2" attributes="0"/>
-                          <Component id="bnSelectMaterial" alignment="0" min="-2" pref="27" max="-2" attributes="0"/>
-                      </Group>
+                      <EmptySpace min="0" pref="159" max="32767" attributes="0"/>
                   </Group>
-                  <Component id="txtFOCD" alignment="0" pref="352" max="32767" attributes="1"/>
+                  <Component id="cbFACD" alignment="1" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="-2" max="-2" attributes="0"/>
           </Group>
@@ -117,15 +113,13 @@
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="txtFMCD" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jXLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="bnSelectMaterial" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="cbFMCD" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="txtFACD" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jXLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="bnSelectApplication" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="cbFACD" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -205,10 +199,6 @@
           <Format format="#0" subtype="-1" type="0"/>
         </Property>
       </Properties>
-    </Component>
-    <Component class="javax.swing.JTextField" name="txtFMCD">
-    </Component>
-    <Component class="javax.swing.JTextField" name="txtFACD">
     </Component>
     <Component class="javax.swing.JFormattedTextField" name="txtFDEP">
       <Properties>
@@ -351,28 +341,16 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bnOKActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="bnSelectMaterial">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="..."/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bnSelectMaterialActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="bnSelectApplication">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="..."/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bnSelectApplicationActionPerformed"/>
-      </Events>
-    </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection code="Variables.getDateFormatString()" type="code"/>
         </Property>
       </Properties>
+    </Component>
+    <Component class="xbuild.Components.XDropdownTableComboBox" name="cbFMCD">
+    </Component>
+    <Component class="xbuild.Components.XDropdownTableComboBox" name="cbFACD">
     </Component>
   </SubComponents>
 </Form>
