--- a/src/xbuild/TillageDialog.form
+++ b/src/xbuild/TillageDialog.form
@@ -36,25 +36,26 @@
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="bnOK" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="bnCancel" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="bnOK" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="bnCancel" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="dpTDATE" min="-2" pref="125" max="-2" attributes="0"/>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Component id="txtTDEP" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
+                          <Component id="txtTDAY" alignment="0" min="-2" pref="108" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace min="0" pref="161" max="32767" attributes="0"/>
                   </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="txtTIMPL" min="-2" pref="327" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="bnSelectTIMPL" min="-2" pref="23" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="dpTDATE" min="-2" pref="125" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Component id="txtTDEP" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
-                  <Component id="txtTDAY" alignment="0" min="-2" pref="108" max="-2" attributes="0"/>
+                  <Component id="cbTIMPL" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -74,9 +75,8 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="txtTIMPL" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jXLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="bnSelectTIMPL" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="cbTIMPL" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -101,8 +101,6 @@
         </Property>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="txtTIMPL">
-    </Component>
     <Component class="javax.swing.JFormattedTextField" name="txtTDEP">
       <Properties>
         <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
@@ -110,14 +108,6 @@
         </Property>
         <Property name="horizontalAlignment" type="int" value="4"/>
       </Properties>
-    </Component>
-    <Component class="javax.swing.JButton" name="bnSelectTIMPL">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="..."/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bnSelectTIMPLActionPerformed"/>
-      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="bnOK">
       <Properties>
@@ -163,6 +153,8 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Day"/>
       </Properties>
+    </Component>
+    <Component class="xbuild.Components.XDropdownTableComboBox" name="cbTIMPL">
     </Component>
   </SubComponents>
 </Form>
