--- a/src/xbuild/CultivarsFrame.form
+++ b/src/xbuild/CultivarsFrame.form
@@ -39,7 +39,7 @@
                   </Group>
                   <Component id="lblLevel1" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="56" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
